# audiblez

./: pyproject.toml
audiblez/: cli.py  core.py  device.py  ui.py
